--- a/LongSeq_NoteBook.ipynb
+++ b/LongSeq_NoteBook.ipynb
@@ -1053,10 +1053,11 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XgP4Coqt2on4",
-        "outputId": "f26b8027-f1df-4cb2-dee7-c3d40ece948a"
+        "outputId": "c21e15eb-d690-4da4-c8c4-c241e375700e"
       },
       "source": [
         "import os\n",
+        "\n",
         "os.chdir('/content/')\n",
         "!(echo 'Clone LongSeq git ...'; git clone https://github.com/AUTH-MINT/LongSeq.git; echo 'done')\n",
         "!test -d /content/ebm_nlp/ || (echo 'Download EBM-NLP dataset'; git clone https://github.com/bepnye/EBM-NLP.git ebm_nlp; echo 'done')\n",
@@ -1068,25 +1069,26 @@
         "!(echo 'Delete unnecessary files...'; rm -rf /content/ebm_nlp/; echo 'done')\n",
         "print('All ready!')"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Create content file.\n",
             "Clone LongSeq git ...\n",
             "Cloning into 'LongSeq'...\n",
-            "remote: Enumerating objects: 77, done.\u001b[K\n",
-            "remote: Counting objects: 100% (77/77), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (64/64), done.\u001b[K\n",
-            "remote: Total 77 (delta 21), reused 54 (delta 9), pack-reused 0\u001b[K\n",
-            "Unpacking objects: 100% (77/77), done.\n",
+            "remote: Enumerating objects: 99, done.\u001b[K\n",
+            "remote: Counting objects: 100% (99/99), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (85/85), done.\u001b[K\n",
+            "remote: Total 99 (delta 34), reused 55 (delta 10), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (99/99), done.\n",
             "done\n",
             "Download EBM-NLP dataset\n",
             "Cloning into 'ebm_nlp'...\n",
             "remote: Enumerating objects: 200, done.\u001b[K\n",
             "remote: Total 200 (delta 0), reused 0 (delta 0), pack-reused 200\u001b[K\n",
-            "Receiving objects: 100% (200/200), 83.47 MiB | 25.31 MiB/s, done.\n",
+            "Receiving objects: 100% (200/200), 83.47 MiB | 21.00 MiB/s, done.\n",
             "Resolving deltas: 100% (82/82), done.\n",
             "done\n",
             "Extracting documents and labels...\n",
@@ -2276,99 +2278,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "id": "ZXTOgGoVeZF-",
-        "outputId": "49cc86fe-6969-421d-bed9-598a592df7b6"
-      },
-      "source": [
-        "from google.colab import files\n",
-        "files.download(\"/content/res.zip\")"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "application/javascript": [
-              "\n",
-              "    async function download(id, filename, size) {\n",
-              "      if (!google.colab.kernel.accessAllowed) {\n",
-              "        return;\n",
-              "      }\n",
-              "      const div = document.createElement('div');\n",
-              "      const label = document.createElement('label');\n",
-              "      label.textContent = `Downloading \"${filename}\": `;\n",
-              "      div.appendChild(label);\n",
-              "      const progress = document.createElement('progress');\n",
-              "      progress.max = size;\n",
-              "      div.appendChild(progress);\n",
-              "      document.body.appendChild(div);\n",
-              "\n",
-              "      const buffers = [];\n",
-              "      let downloaded = 0;\n",
-              "\n",
-              "      const channel = await google.colab.kernel.comms.open(id);\n",
-              "      // Send a message to notify the kernel that we're ready.\n",
-              "      channel.send({})\n",
-              "\n",
-              "      for await (const message of channel.messages) {\n",
-              "        // Send a message to notify the kernel that we're ready.\n",
-              "        channel.send({})\n",
-              "        if (message.buffers) {\n",
-              "          for (const buffer of message.buffers) {\n",
-              "            buffers.push(buffer);\n",
-              "            downloaded += buffer.byteLength;\n",
-              "            progress.value = downloaded;\n",
-              "          }\n",
-              "        }\n",
-              "      }\n",
-              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
-              "      const a = document.createElement('a');\n",
-              "      a.href = window.URL.createObjectURL(blob);\n",
-              "      a.download = filename;\n",
-              "      div.appendChild(a);\n",
-              "      a.click();\n",
-              "      div.remove();\n",
-              "    }\n",
-              "  "
-            ],
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "application/javascript": [
-              "download(\"download_bcac6951-c141-454d-ae02-6de340c4d1e4\", \"res.zip\", 509551885)"
-            ],
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ]
-          },
-          "metadata": {}
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "sJ9la6CHfM0a"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
